# rustychess

./: .gitignore  README.md
.github/workflows/: deploy.yaml
chessbot/: Cargo.toml  README.md  model.safetensors  model.validation.safetensors
chessbot/.github/workflows/: deploy.yaml
chessbot/src/: lib.rs  main.rs  search.rs  ui.rs
chessbot/src/evaluator/: mod.rs  nneteval.rs  pointseval.rs  simpleeval.rs
chessbot/src/search/: alphabeta.rs  mod.rs  simpleminmax.rs
evaluation/: README.md
modeltraining/: .gitignore  README.md  datasetbuilder.py  model.keras  requirements.txt  training.py
modeltraining/lib/: game.py
web/: Cargo.toml  README.md  model.safetensors  package-lock.json  package.json  tsconfig.json  webpack.config.js
web/js/: app.tsx  index.tsx
web/src/: lib.rs
web/static/: index.html
