[package]
name = "chessbot"
version = "0.1.0"
edition = "2021"

[lib]
name = "chessbot"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "chessbot"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.3.0" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.3.0" }
chess = "3.2.0"
colored = "2.0.4"
rayon = "1.8.0"
wasm-bindgen = "0.2.87"
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = "s"